--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.4'
 services:
   letstrack-database:
     build: ./database
-    image: xaivntaaj/letstrack-database:latest
+    image: xaivntaaj/letstrack-database:1.0
     ports:
       - 3306:3306
     environment:
@@ -13,7 +13,7 @@ services:
 
   letstrack-backend:
     build: ./backend
-    image: xaivntaaj/letstrack-backend:latest
+    image: xaivntaaj/letstrack-backend:1.0
     ports:
       - 5000:5000
     restart: always
@@ -24,7 +24,7 @@ services:
 
   letstrack-frontend:
     build: ./frontend
-    image: xaivntaaj/letstrack-frontend:latest
+    image: xaivntaaj/letstrack-frontend:1.0
     ports:
       - 3000:3000
       - 80:80
